# memo

./: .gitignore  Anchor.toml  Memo.jsx  MemoUI.jsx  README.md  check_mint.js  firebase.json  firebase.rules  firestore.indexes.json  index.css  index.html  main.jsx  memo_social_launch_plan.md  package-lock.json  package.json  tailwind.config.js  test_jupiter.js  vercel.json  verify_encryption.mjs  vite.config.js
.agents/: tailwind.md
.github/workflows/: emulator-ci.yml
apps/telegram-bot/: .gitignore  DEV_COMMANDS.md  LLM_CONTEXT.md  README.md  SETUP_GUIDE.md  USER_MANUAL.md  db.json  get_community_stats.js  package.json  product_slides.md  tsconfig.json  vercel.json
apps/web/: .eslintrc.cjs  Memo.jsx  index.css  index.html  main.jsx  package.json  roadmap  tailwind.config.js  verify_encryption.mjs  vite.config.js
assets/: whitepaper.md
dev/: .env.local.example  README.dev.md
dev/scripts/: postinstall.js  smoke-test.js
memo-android/: capacitor.config.json  package.json
programs/memo/: Cargo.toml
programs/memo/src/: error.rs  lib.rs  state.rs
programs/memo/src/instructions/: delete_memo.rs  initialize_mint.rs  mod.rs  send_memo.rs
programs/memo/src/utils/: mod.rs  pda.rs
public/idl/: memo.json
scripts/: bullish_memos.txt  buy_bot.js  buy_wallet.json  check_mint.js  postinstall.js  volume_bot.js  volume_bot_jito.ts
src/: polyfills.js
src/components/: CommunityChat.jsx  ConnectWalletPage.jsx  ErrorBoundary.jsx  LandingPage.jsx  WhitepaperPage.jsx
src/sdk/: MemoProvider.jsx  constants.js  index.js
src/shared/: constants.js  (+1 more)
tests/: memo.ts
(+100 files in other folders)
