[package]
name = "memo"
version = "0.1.0"
description = "Memo Protocol - End-to-end encrypted messaging on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.18"

